[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/scripts/Teleporter.gd" type="Script" id=1]



[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.9059, 299.981 )

[node name="Teleporter" type="Area2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="change_scene" type="Timer" parent="."]
wait_time = 1.1
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Teleporter_body_entered"]
[connection signal="timeout" from="change_scene" to="." method="_on_change_scene_timeout"]
